--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ pylint==2.17.5
 logging==0.4.9.6
 pyarrow==18.1.0
 kafka==1.3.5
+kafka-python==2.0.2
+pyspark==3.5.4
+google_cloud_bigquery-3.27.0
+pandas_gbq-0.26.0
